--- a/rephrase/static/css/rephrase.css
+++ b/rephrase/static/css/rephrase.css
@@ -43,7 +43,7 @@ a {
 .nav_tabs {
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0;
 }
@@ -71,6 +71,12 @@ a {
     grid-column-start: 1;
     grid-column-end: 2;
     text-align: center;
+    height: 400px;
+    border: #1b1b1b;
+    border-style: groove;
+    border-width: thin;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .profile_info {
@@ -83,6 +89,12 @@ a {
     color:  #5680e9;
 }
 
+.profile_img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
 .friends {
     grid-column-start: 3;
     grid-column-end: 4;
@@ -90,7 +102,7 @@ a {
     align-items: center;
     text-align: center;
     margin-right: 50px;
-    width: 580px;
+    width: fit-content;
 }
 
 .friends_header {
@@ -111,3 +123,85 @@ a {
     grid-column-end: 3;
 }
 
+.friends_list {
+    width: 366.23px;
+    justify-content: end;
+}
+
+.user_list_entry {
+    display: flex;
+    margin-top: 10px;
+    justify-content: space-between;
+}
+
+ul {
+    padding-inline-start: unset;
+}
+
+.user_username {
+    margin-left: 50px;
+}
+
+.friend_username {
+    float: right;
+
+}
+
+.friend_img {
+    border-radius: 50%;
+}
+
+.popup {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 1;
+}
+
+.container {
+   width: 500px;
+   height: fit-content;
+   background-color: white;
+   border-radius: 4px;
+   text-align: center;
+   padding: 15px;
+   position: relative;
+}
+
+button {
+   background-color:  #5680e9;
+   color: white;
+   border-radius: 9px;
+   padding: 6px;
+   border: #5680e9;
+}
+
+button:hover, button:focus {
+   cursor: pointer;
+   background-color: white;
+   color: #5680e9;
+   transitions: 0.4s;
+   border: white;
+}
+
+.close {
+   position: absolute;
+   top: 0;
+   right: 8px;
+   font-size: xxx-large;
+   font-weight: 600;
+   transform: rotate(45deg);
+   cursor: pointer;
+   font-family: "Times New Roman";
+}
+
+.user_info {
+    display: contents
+}
