--- a/rephrase/templates/account.html
+++ b/rephrase/templates/account.html
@@ -16,10 +16,10 @@
                 </form>
             <div>
                 <ul>
-                {% for user in users %}
+                {% for users in suggested_friends %}
                         <li>
-                            <div class="user_list_entry"><img class="user_img" src="{{ user.profile_img.url }}" alt="user_profile_img" width="20">
-                            <p class="user_username">{{ user.username }}</p>
+                            <div class="user_list_entry"><img class="user_img" src="{{ users.profile_img.url }}" alt="user_profile_img" width="20">
+                            <p class="user_username">{{ users.username }}</p>
                             </div>
                         </li>
                     {% endfor %}
