--- a/rephrase/static/css/rephrase.css
+++ b/rephrase/static/css/rephrase.css
@@ -218,8 +218,15 @@ user_list_entry_self {
 #display {
     height: 500px;
     overflow-y: scroll;
+    text-align: -webkit-center;
 }
 
-.message_friend {
+.chat_list_area {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+}
 
+.chat_list_links {
+    color: #1b1b1b;
 }
