--- a/rephrase/templates/chat.html
+++ b/rephrase/templates/chat.html
@@ -1,4 +1,6 @@
 {% extends 'home.html' %}
+{% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +9,7 @@
 <style>
 body {
     display: grid;
-    grid-template-columns: auto max-content auto;
+    grid-template-columns: max-content auto max-content;
     grid-template-rows: max-content;
     grid-gap: 30px;
     margin: 0;
@@ -67,6 +69,28 @@ body {
 </head>
 
 <body>
+    <div class="popup">
+        <div class="container">
+            <div class="close" id="close">+</div>
+                <form method="POST" class="creat_chat_form">
+                {% csrf_token %}
+                    {% for field in create_chat_form %}
+                    <p class="p_form">
+                {{ field.label_tag }}
+                {{ field }}
+                {% if field.help_text %}
+                <small style="color:  grey;">{{ field.help_text }}</small>
+            {% endif %}
+            {%  for error in field.errors %}
+                <p style="color: red;"> {{ error }}</p>
+            {% endfor %}
+        </p>
+        {% endfor %}
+            <button type="submit" class="btn">{%  trans 'Create Chat' %}</button>
+                </form>
+            </div>
+        </div>
+    </div>
     <div class="chat_container">
     <h2>{{chat_details.name}} - DjChat</h2>
 
@@ -141,7 +165,23 @@ setInterval(function(){
         </div>
     </div>
     </div>
-</body>
+    <div class="chat_list_area">
+    <div class="friends_header">
+                 <h2 class="account_titles" id="friends_title">{% trans 'Chats' %}</h2>
+                <div class="buttons">
+                    <button class="btn-chat" id="create_chat_btn" value="create_chat">{% trans 'Create Chat' %}</button>
+                </div>
+    <div class="chat_list">
+    {% for chat in chats %}
+        <div class="chat_list_entry">
+            <a class="chat_list_links" href="{% url 'chat' chat.id %}">{{ chat.name }}</a>
+        </div>
+    {% endfor %}
+    </div>
+    </div>
+
+
+
     
     <script type="text/javascript">
       $(document).on('submit','#post-form',function(e){
@@ -163,7 +203,8 @@ setInterval(function(){
         document.getElementById('message').value = ''
       });
     </script>
-
+{% block extrascripts %}<script src="{% static '/js/script.js' %}" type="text/javascript"></script>{% endblock %}
     {% endblock %}
-    </html>
+</body>
+</html>
 
