--- a/rephrase/templates/home.html
+++ b/rephrase/templates/home.html
@@ -1,4 +1,5 @@
 {%  load static %}
+{% load i18n %}
 
 <html lang="en">
 <head>
@@ -10,23 +11,23 @@
     <header class="header">
         <nav>
             <ul class="nav_tabs">
-                <li><a class="hd-link" href="{% url 'home' %}" class="link">Home</a></li>
+                <li><a class="hd-link" href="{% url 'home' %}" class="link">{% trans 'Home' %}</a></li>
                 <li><a class="hd-link" href="https://github.com/JesseFentress/rephraseAPP" class="link" target="_blank">GitHub</a></li>
-                <li><a class="hd-link" href="{% url 'chat-list' %}" class="link">Chat</a></li>
                 {% if user.is_authenticated %}
-                    <li><a class="hd-link" href="{% url 'account' %}"> My Account</a></li>
-                    <li><a class="hd-link" href="{% url 'logout' %}">Log Out</a></li>
+                    <li><a class="hd-link" href="{% url 'chat-list' %}" class="link">{% trans 'Chat' %}</a></li>
+                    <li><a class="hd-link" href="{% url 'account' %}"> {% trans 'My Account' %}</a></li>
+                    <li><a class="hd-link" href="{% url 'logout' %}">{% trans 'Log Out' %}</a></li>
                 {% else %}
-                    <li><a class="hd-link" href="{% url 'login' %}">Log In</a></li>
-                    <li><a class="hd-link" href="{% url 'sign-up' %}">Sign Up</a></li>
+                    <li><a class="hd-link" href="{% url 'login' %}">{% trans 'Log In' %}</a></li>
+                    <li><a class="hd-link" href="{% url 'sign-up' %}">{% trans 'Sign Up' %}</a></li>
                 {% endif %}
             </ul>
         </nav>
     </header>
     {% block content %}
     <div class="brand">
-        <h1>Rephrase {{ titles }}</h1>
-        <h3>Inter-language Communication Made Easy</h3>
+        <h1>Rephrase</h1>
+        <h3>{% trans 'Inter-language Communication Made Easy' %}</h3>
     </div>
 
 </body>
