--- a/rephrase/templates/login.html
+++ b/rephrase/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'home.html' %}
 {% load static %}
+{% load i18n %}
 {%  block content %}
 
     {% if messages %}
@@ -11,7 +12,7 @@
     {% endif %}
     <div class="login">
     <div class="container">
-    <h2>Login</h2>
+    <h2>{% trans 'Log In' %}</h2>
     <form method="POST" class="form">
         {% csrf_token %}
         {% for field in log_form %}
