--- a/rephrase/templates/sign-up.html
+++ b/rephrase/templates/sign-up.html
@@ -1,8 +1,9 @@
 {% extends 'home.html' %}
 {% load static %}
+{% load i18n %}
 {% block content %}
     <div class="container">
-    <h2>Sign up</h2>
+    <h2>{%  trans 'Sign up' %}</h2>
     <form method="POST" class="form">
         {% csrf_token %}
         {% for field in form %}
@@ -17,7 +18,7 @@
             {% endfor %}
         </p>
         {% endfor %}
-            <button type="submit" class="btn">Sign Up</button>
+            <button type="submit" class="btn">{%  trans 'Sign up' %}</button>
     </form>
     </div>
 {% endblock %}
