--- a/rephrase/templates/chat.html
+++ b/rephrase/templates/chat.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html>
+
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block content %}
@@ -13,12 +13,12 @@ body {
     grid-template-rows: max-content;
     grid-gap: 30px;
     margin: 0;
-    background-color: #c1c8e4;
+    background-color:  whitesmoke;
 }
 
 .container {
-  border: 2px solid #dedede;
-  background-color: #f1f1f1;
+  border: 2px solid #007cc7;
+  background-color:  #12232E;
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
@@ -68,7 +68,6 @@ body {
 <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 </head>
 
-<body>
     <div class="popup">
         <div class="container">
             <div class="close" id="close">+</div>
@@ -91,8 +90,10 @@ body {
             </div>
         </div>
     </div>
+
+
     <div class="chat_container">
-    <h2>{{chat_details.name}} - DjChat</h2>
+    <h2>{{chat_details.name}}</h2>
 
     <div id="display">
     </div>
@@ -148,11 +149,7 @@ setInterval(function(){
         background-color: #45a049;
         }
     
-        div {
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 20px;
-        }
+
         </style>
         <div class="chat">
         <form id="post-form">
@@ -165,12 +162,13 @@ setInterval(function(){
         </div>
     </div>
     </div>
-    <div class="chat_list_area">
+    <div class="left_side_container">
     <div class="friends_header">
                  <h2 class="account_titles" id="friends_title">{% trans 'Chats' %}</h2>
                 <div class="buttons">
-                    <button class="btn-chat" id="create_chat_btn" value="create_chat">{% trans 'Create Chat' %}</button>
+                    <button class="btn-chat" id="popup_btn" value="create_chat">{% trans 'Create Chat' %}</button>
                 </div>
+    </div>
     <div class="chat_list">
     {% for chat in chats %}
         <div class="chat_list_entry">
@@ -179,14 +177,14 @@ setInterval(function(){
     {% endfor %}
     </div>
     </div>
-
+    </div>
 
 
     
     <script type="text/javascript">
       $(document).on('submit','#post-form',function(e){
         e.preventDefault();
-    
+
         $.ajax({
           type:'POST',
           url:'/send',
@@ -203,8 +201,6 @@ setInterval(function(){
         document.getElementById('message').value = ''
       });
     </script>
-{% block extrascripts %}<script src="{% static '/js/script.js' %}" type="text/javascript"></script>{% endblock %}
+        {% block extrascripts %}<script src="{% static '/js/script.js' %}" type="text/javascript"></script>
     {% endblock %}
-</body>
-</html>
-
+    {% endblock %}
