--- a/rephrase/templates/chat.html
+++ b/rephrase/templates/chat.html
@@ -31,7 +31,7 @@ body {
 }
 
 .lighter {
-    border-color: #ccc;
+    border-color: #007cc7;
     background-color: #007cc7 ;
     float: right;
 }
@@ -120,11 +120,11 @@ setInterval(function(){
             {
                 const username = "{{ username }}";
                 if (response.users[key] === username) {
-                    var temp="<div class='container lighter'><b>"+response.users[key]+"</b><p>"+response.messages[key].text+"</p><span class='time-left'>"+response.messages[key].date_time+"</span></div>";
+                    var temp="<div class='container lighter'><b>"+response.users[key]+"</b><p>"+response.messages[key]+"</p><span class='time-left'>"+response.date_time[key]+"</span></div>";
                     $("#display").append(temp);
                 }
                 else {
-                    var temp="<div class='container darker'><b>"+response.users[key]+"</b><p>"+response.messages[key].text+"</p><span class='time-left'>"+response.messages[key].date_time+"</span></div>";
+                    var temp="<div class='container darker'><b>"+response.users[key]+"</b><p>"+response.messages[key]+"</p><span class='time-left'>"+response.date_time[key]+"</span></div>";
                 $("#display").append(temp);
                 }
 
@@ -134,7 +134,7 @@ setInterval(function(){
             alert('An error occured')
         }
     });
-},1000);
+},100);
 })
     </script>
 
@@ -182,7 +182,7 @@ setInterval(function(){
     <div class="friends_header">
                  <h2 class="account_titles" id="friends_title">{% trans 'Chats' %}</h2>
                 <div class="buttons">
-                    <button class="btn-chat" id="popup_btn" value="create_chat">{% trans 'Create Chat' %}</button>
+                    <button class="btn-chat" id="create_chat_btn" value="create_chat">{% trans 'Create Chat' %}</button>
                 </div>
     </div>
     <div class="chat_list">
@@ -193,14 +193,14 @@ setInterval(function(){
     {% endfor %}
     </div>
     </div>
-    </div>
+
 
 
     
     <script type="text/javascript">
       $(document).on('submit','#post-form',function(e){
         e.preventDefault();
-
+    
         $.ajax({
           type:'POST',
           url:'/send',
@@ -217,6 +217,8 @@ setInterval(function(){
         document.getElementById('message').value = ''
       });
     </script>
-        {% block extrascripts %}<script src="{% static '/js/script.js' %}" type="text/javascript"></script>
+{% block extrascripts %}<script src="{% static '/js/script.js' %}" type="text/javascript"></script>{% endblock %}
     {% endblock %}
-    {% endblock %}
+</body>
+</html>
+
