--- a/rephrase/templates/home.html
+++ b/rephrase/templates/home.html
@@ -3,6 +3,8 @@
 
 <html lang="en">
 <head>
+    <!-- <meta charset="UTF-8"> -->
+    <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
     <meta charset="UTF-8">
     {% block title %}<title>Rephrase</title>{% endblock %}
     <link rel="stylesheet" href="{% static 'css/rephrase.css' %}">
@@ -42,6 +44,9 @@
         </div>
     <div class="brand">
         <h1>Rephrase</h1>
+        {% for t in c %}
+        <p>{{ t }}</p>
+        {% endfor %}
         <h3>{% trans 'Inter-language Communication Made Easy' %}</h3>
     </div>
 
