--- a/rephrase/templates/chat.html
+++ b/rephrase/templates/chat.html
@@ -134,7 +134,7 @@ setInterval(function(){
             alert('An error occured')
         }
     });
-},100);
+},1000);
 })
     </script>
 
@@ -182,7 +182,7 @@ setInterval(function(){
     <div class="friends_header">
                  <h2 class="account_titles" id="friends_title">{% trans 'Chats' %}</h2>
                 <div class="buttons">
-                    <button class="btn-chat" id="create_chat_btn" value="create_chat">{% trans 'Create Chat' %}</button>
+                    <button class="btn-chat" id="popup_btn" value="create_chat">{% trans 'Create Chat' %}</button>
                 </div>
     </div>
     <div class="chat_list">
