--- a/rephrase/templates/account.html
+++ b/rephrase/templates/account.html
@@ -2,6 +2,16 @@
 {% load static %}
 {% load i18n %}
 {% block content %}
+    <style>
+    body {
+    display: grid;
+    grid-template-columns: max-content auto max-content;
+    grid-template-rows: max-content;
+    grid-gap: 30px;
+    margin: 0;
+    background-color: whitesmoke;
+}
+    </style>
 
     {% if user.is_authenticated %}
         <div class="popup">
@@ -30,7 +40,7 @@
         </div>
         <div class="left_side_container">
             <div class="profile_header">
-                <h2 class="account_titles">Hello, {{ user.username }}!</h2>
+                <h2 class="account_titles">{% trans 'Hello' %}, {{ user.username }}!</h2>
                 <img class="profile_img" src="{{ user.profile_img.url }}" alt="profile image">
             </div>
             <div class="profile_info">
@@ -38,7 +48,7 @@
                     <li class="profile_item">{{ user.first_name }} {{ user.last_name }}</li>
                     <li class="profile_item">{{ user.email }}</li>
                     <li class="profile_item">{{ user.date_joined }}</li>
-                <li class="profile_item"><a href="{% url 'edit' %}"><button class="account-button" id="{{ user.username}}">Edit Profile</button></a></li>
+                <li class="profile_item"><a href="{% url 'edit' %}"><button class="account-button" id="{{ user.username}}">{% trans 'Edit Profile' %}</button></a></li>
                 </ul>
             </div>
         </div>
