--- a/rephrase/templates/empty-chat.html
+++ b/rephrase/templates/empty-chat.html
@@ -19,34 +19,12 @@ body {
 }
 
 .container {
-  border: 2px solid #dedede;
-  background-color: #f1f1f1;
+  border: 2px solid #007cc7;
+  background-color:  #12232E;
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
 }
-
-.container::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.container img {
-  float: left;
-  max-width: 60px;
-  width: 100%;
-  margin-right: 20px;
-  border-radius: 50%;
-}
-
-.container img.right {
-  float: right;
-  margin-left: 20px;
-  margin-right:0;
-}
-
-
 </style>
 </head>
 
@@ -82,20 +60,26 @@ body {
 
         <style>
 
-        div {
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 20px;
-        }
         </style>
 
+    <div class="chat">
+        <form id="post-form">
+            {% csrf_token %}
+            <input type="hidden" name="username" id="username" value="{{username}}"/>
+            <input type="hidden" name="chat_id" id="chat_id" value="{{chat_details.id}}"/>
+            <input type="hidden" name="message" id="message" width="100px" />
+            <input type="hidden" value="Send">
+        </form>
+        </div>
     </div>
-    <div class="chat_list_area">
+    </div>
+    <div class="left_side_container">
     <div class="friends_header">
                  <h2 class="account_titles" id="friends_title">{% trans 'Chats' %}</h2>
                 <div class="buttons">
                     <button class="btn-chat" id="popup_btn" value="create_chat">{% trans 'Create Chat' %}</button>
                 </div>
+    </div>
     <div class="chat_list">
     {% for chat in chats %}
         <div class="chat_list_entry">
@@ -104,7 +88,7 @@ body {
     {% endfor %}
     </div>
     </div>
-    </div>
+
         {% block extrascripts %}<script src="{% static '/js/script.js' %}" type="text/javascript"></script>
     {% endblock %}
     {% endblock %}
