--- a/rephrase/templates/home.html
+++ b/rephrase/templates/home.html
@@ -27,29 +27,27 @@
         </nav>
     </header>
     {% block content %}
-        <div class="chat_list_area">
-    <div class="friends_header">
-                 <h2 class="account_titles" id="friends_title">{% trans 'Chats' %}</h2>
-                <div class="buttons">
-                    <button class="btn-chat" id="create_chat_btn" value="create_chat">{% trans 'Create Chat' %}</button>
-                </div>
-    <div class="chat_list">
-    {% for chat in chats %}
-        <div class="chat_list_entry">
-            <a class="chat_list_links" href="{% url 'chat' chat.id %}">{{ chat.name }}</a>
-        </div>
-    {% endfor %}
-    </div>
-    </div>
-        </div>
 
-    <div class="brand">
-        <h1>Rephrase</h1>
-        {% for t in c %}
-        <p>{{ t }}</p>
-        {% endfor %}
-        <h3>{% trans 'Inter-language Communication Made Easy' %}</h3>
-    </div>
+
+        <div class="brand">
+            <h1>Rephrase</h1>
+            <h3>{% trans 'Inter-language Communication Made Easy' %}</h3>
+        </div>
+        <img class="home_img" src="/static/media/images/cultures.jpg"/>
+        {% if user.is_authenticated %}
+            <div class="main_btns">
+                <div class="start_chatting">
+                    <button class="main_btn"><a href="{% url 'chat-list' %}"><p class="button_text">{% trans 'Start Chatting' %}</p></a></button>
+                </div>
+                <div class="start_chatting">
+                    <button class="main_btn"><a href="{% url 'account' %}"><p class="button_text">{% trans 'Account' %}</p></a></button>
+                </div>
+            </div>
+        {% else %}
+            <div class="start_chatting">
+                <button id="start_chatting_btn"><a href="{% url 'sign-up' %}"><p class="button_text">{% trans 'Sign Up' %}</p></a></button>
+            </div>
+        {% endif %}
 
 </body>
 {% endblock %}
