--- a/rephrase/templates/chat.html
+++ b/rephrase/templates/chat.html
@@ -24,6 +24,14 @@ body {
   margin: 10px 0;
 }
 
+.popup .container {
+  border: 2px solid white;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
 .darker {
     border-color: #ccc;
     background-color: #ddd;
