--- a/rephrase/templates/empty-chat.html
+++ b/rephrase/templates/empty-chat.html
@@ -18,6 +18,14 @@ body {
     background-color: #c1c8e4;
 }
 
+.popup .container {
+  border: 2px solid white;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
 .container {
   border: 2px solid #007cc7;
   background-color:  #12232E;
